--- a/manifest.json
+++ b/manifest.json
@@ -14,13 +14,14 @@
 },
   
   "permissions": [
-    "tabs", "webNavigation"
+    "tabs", "webNavigation","activeTab",
+    "contextMenus"
 ],
   
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["lib/jquery-3.2.1.min.js", "lib/html2canvas.js", "loggerPlugin.js"]
+      "js": ["lib/jquery-3.2.1.min.js", "lib/html2canvas.js", "loggerPlugin.js", "simplify.js"]
     }
   ],
   
